# rust-grpc

./: .env.example  .env.production  .env.testing  Cargo.toml  README.md  build.rs  compose.yml
app/: Cargo.toml
doc/: docs.md
docker/local/rust/: Dockerfile
docker/prod/: Dockerfile
proto/sample/: sample.proto
src/: main.rs
src/configs/: config.rs
src/contexts/: context.rs
src/errors/: error.rs
src/interceptors/: interceptor.rs
src/loggers/: logger.rs
src/middleware/: mod.rs  request_middleware.rs
src/repositories/sample/: sample_repository.rs
src/routers/: router.rs
src/server/grpc/sample/: mod.rs  sample_server.rs  sample_server_1_test.rs  sample_server_2_test.rs
src/services/sample/: sample_service.rs
src/usecases/sample/: hello_add_text_usecase.rs  hello_bidirectional_stream_usecase.rs  hello_client_stream_usecase.rs  hello_server_stream_usecase.rs  hello_usecase.rs  mod.rs
