[package]
name = "rust_grpc"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
env_logger = "0.11.8"
http = "1.3.1"
hyper = "1.6.0"
log = "0.4.27"
prost = "0.13.5"
tokio = { version = "1.45.1", features = ["full"] }
tonic = "0.13.1"
tonic-reflection = "0.13.1"
tower = "0.5.2"
uuid = { version = "1.17.0", features = ["v4"] }

[build-dependencies]
tonic-build = "0.13.1"
