[package]
name = "rust_grpc"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
env_logger = "0.11.8"
hyper = "1.6.0"
envy = "0.4.2"
log = "0.4.27"
prost = "0.13.5"
prost-validate = { version = "0.2.7", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
tonic = "0.13.1"
tonic-reflection = "0.13.1"
tower = "0.5.2"
uuid = { version = "1.17.0", features = ["v4"] }

[build-dependencies]
prost-build = "0.13.5"
prost-validate-build = "0.2.7"
tonic-build = { version = "0.13.1", features = ["prost"] } 
